--- a/Locales/english.json
+++ b/Locales/english.json
@@ -52,7 +52,10 @@
       "firstName": "Firstname",
       "lastName": "Lastname",
       "message": "Message",
-      "btnText": "Continue"
+      "btnText": "Continue",
+      "firstNameRequired": "You need to fill in your firstname",
+      "lastNameRequired": "You need to fill in your lastname","emailRequired": "Email is missing",
+      "messageRequired": "Message text is missing"
     }
   }
 }
