--- a/Locales/english.json
+++ b/Locales/english.json
@@ -55,7 +55,9 @@
       "btnText": "Continue",
       "firstNameRequired": "You need to fill in your firstname",
       "lastNameRequired": "You need to fill in your lastname","emailRequired": "Email is missing",
-      "messageRequired": "Message text is missing"
+      "messageRequired": "Message text is missing",
+      "alertSent":"You mail have been sent",
+      "alertNotSent":"Something has gone wrong"
     }
   }
 }
