--- a/Locales/chinese.json
+++ b/Locales/chinese.json
@@ -9,6 +9,8 @@
     "projectPage": {
       "title": "項目",
       "btnText": "關閉",
+      "alertWebPage": "",
+      "alertProject": "",
       "storageModal": {
         "title": "儲藏室出租",
         "projectTools": "React, Redux och Sendgrid",
